--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <ul>
   <li><a th:href="@{/numbers(n = 20)}">example: N IS 20; number division by 3</a></li>
   <li><a th:href="@{/sum-numbers(n = 10)}">example: N IS 10; the sum of all numbers from 1 to N</a></li>
-  <li><a th:href="@{/words(word='Hello', n = 5)}">example: the word IS "Hello"; the word is repeated N times</a></li>
+  <li><a th:href="@{/words(word='Hello', n = 5)}">example: the word IS "Hello"; the word is repeated N times, WHERE N IS 5</a></li>
 </ul>
 </body>
 </html>
